<resources>
    <string name="app_name">DidoyPizza</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="order"> Order Now </string>
    <string name="sale"> Sales </string>
    <string name="payment"> Payment </string>
    <string name="extras"> Extra </string>
    <string name="About"> About Us </string>
    <string name="contacts"> Contact </string>

</resources>
